refactor: 크루원 가입 신청 목록 조회 기능 리팩토링