@@ -3,18 +3,15 @@ package kr.pickple.back.crew.service;
 import kr.pickple.back.address.dto.response.MainAddressResponse;
 import kr.pickple.back.address.service.AddressService;
 import kr.pickple.back.common.config.property.S3Properties;
-import kr.pickple.back.common.domain.RegistrationStatus;
 import kr.pickple.back.crew.domain.Crew;
-import kr.pickple.back.crew.domain.CrewMember;
-import kr.pickple.back.crew.dto.CrewMemberRelationDto;
 import kr.pickple.back.crew.dto.request.CrewCreateRequest;
 import kr.pickple.back.crew.dto.response.CrewIdResponse;
 import kr.pickple.back.crew.dto.response.CrewProfileResponse;
 import kr.pickple.back.crew.exception.CrewException;
 import kr.pickple.back.crew.exception.CrewExceptionCode;
-import kr.pickple.back.crew.repository.CrewMemberRepository;
 import kr.pickple.back.crew.repository.CrewRepository;
 import kr.pickple.back.member.domain.Member;
+import kr.pickple.back.member.dto.response.MemberResponse;
 import kr.pickple.back.member.exception.MemberException;
 import kr.pickple.back.member.repository.MemberRepository;
 import lombok.RequiredArgsConstructor;
@@ -22,7 +19,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static kr.pickple.back.common.domain.RegistrationStatus.CONFIRMED;
 import static kr.pickple.back.crew.exception.CrewExceptionCode.CREW_IS_EXISTED;
 import static kr.pickple.back.member.exception.MemberExceptionCode.MEMBER_NOT_FOUND;
 
@@ -35,7 +33,6 @@ public class CrewService {
     private final CrewRepository crewRepository;
     private final AddressService addressService;
     private final MemberRepository memberRepository;
-    private final CrewMemberRepository crewMemberRepository;
 
     @Transactional
     public CrewIdResponse createCrew(final CrewCreateRequest crewCreateRequest) {
@@ -50,6 +47,7 @@ public class CrewService {
         );
 
         final Crew crew = crewCreateRequest.toEntity(leader, mainAddressResponse, s3Properties.getProfile(), s3Properties.getBackground());
+        crew.addCrewMember(leader);
         final Long crewId = crewRepository.save(crew).getId();
 
         return CrewIdResponse.from(crewId);
@@ -59,12 +57,12 @@ public class CrewService {
         final Crew crew = crewRepository.findById(crewId)
                 .orElseThrow(() -> new CrewException(CrewExceptionCode.CREW_NOT_FOUND));
 
-        final List<CrewMember> confirmedMembers = crewMemberRepository.findCrewMemberByStatusAndCrewId(RegistrationStatus.CONFIRMED, crewId);
-        final List<CrewMemberRelationDto> confirmedMemberDtos = confirmedMembers.stream()
-                .map(CrewMemberRelationDto::fromEntity)
-                .collect(Collectors.toList());
+        final List<Member> confirmedCrewMembers = crew.getCrewMembers(CONFIRMED);
+        final List<MemberResponse> crewMembers = confirmedCrewMembers.stream()
+                .map(MemberResponse::from)
+                .toList();
 
-        return CrewProfileResponse.fromEntity(crew, confirmedMemberDtos);
+        return CrewProfileResponse.fromEntity(crew, crewMembers);
     }
 
     private void validateIsDuplicatedCrewInfo(final String name) {
